# pegaso-yourmedportal

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  turbo.json
apps/python-api/: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
apps/python-api/alembic/: env.py  script.py.mako
apps/python-api/alembic/versions/: 0001_initial_schema.py
apps/python-api/src/yourmedportal_api/: config.py  load_root_env.py  main.py
apps/python-api/src/yourmedportal_api/application/admin/: admin_activity_service.py  admin_auth_service.py  admin_booking_service.py  admin_macro_area_service.py  admin_report_service.py  admin_report_upload_service.py  admin_user_service.py  admin_visit_type_service.py
apps/python-api/src/yourmedportal_api/application/public/: public_booking_service.py  public_catalog_service.py  public_report_service.py  public_scheduling_service.py
apps/python-api/src/yourmedportal_api/application/support/: activity_logger.py  auth_service.py
apps/python-api/src/yourmedportal_api/composition/: app_container.py
apps/python-api/src/yourmedportal_api/db/: models.py  session.py
apps/python-api/src/yourmedportal_api/http/: schemas.py
apps/python-api/src/yourmedportal_api/infrastructure/repositories/: activity_log_repository.py  admin_user_repository.py  booking_repository.py  macro_area_repository.py  report_attachment_repository.py  report_repository.py  (+1 more)
apps/python-api/src/yourmedportal_api/lib/: calendar.py  cf.py  codes.py  email.py
apps/python-api/src/yourmedportal_api/rest/: http_error.py
(+78 files in other folders)
