[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yourmedportal-api"
version = "1.0.0"
description = "Python API (parità con apps/api TypeScript)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/yourmedportal_api"]
